# Developer-Analytics-Tool

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dev_analytics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
script/: cli.py  processors.py  reader.py  reports.py
tests/: test_cli.py  test_processors.py  test_reader.py  test_reports.py
