[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-analytics"
version = "1.0.0"
authors = [
    {name = "Vsevolod"},
]
description = "Анализ эффективности работы разработчиков"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tabulate>=0.9.0",
]

[project.scripts]
dev = "script.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --cov=script --cov-report=term-missing --cov-report=html"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']

[tool.setuptools]
packages = {find = {where = ["."], include = ["script*"], exclude = ["data*", "tests*", "htmlcov*", ".*", "*.pyc"]}}
include-package-data = true